style: Fixing the gap between sections over 1200px

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -116,6 +116,24 @@
     width: 46%;
   }
 
+  .latest-projects {
+    position: relative;
+    top: -100px;
+    left: 0;
+  }
+
+  .references {
+    position: relative;
+    top: -100px;
+    left: 0;
+  }
+
+  .latest-updates {
+    position: relative;
+    top: -100px;
+    left: 0;
+  }
+
   .updates-title,
   .latest-updates {
     margin: 0 auto;
